--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "browser-sync": "^2.13.0",
     "del": "^2.2.1",
     "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-insert": "^0.5.0",
     "gulp-jade2php": "^1.0.3",
     "gulp-replace": "^0.5.4",
     "gulp-sourcemaps": "^1.6.0",
