--- a/lib/compose.yml
+++ b/lib/compose.yml
@@ -1,29 +1,25 @@
 version: '2'
 services:
     wordpress:
-        image: dsifford/wordpress:nginx
-        ports:
-            - "22222:22222"
-            - "443:443"
+        image: dsifford/wordpress:apache-next
         volumes:
             # Database
             - ../data:/data
             # Plugins
-            - ../wp-content/plugins/fanciest-author-box:/var/www/$site_name/htdocs/wp-content/plugins/fanciest-author-box
-            - ../wp-content/plugins/fusion-core:/var/www/$site_name/htdocs/wp-content/plugins/fusion-core
-            - ../wp-content/plugins/submission-flow:/var/www/$site_name/htdocs/wp-content/plugins/submission-flow
-            - ../wp-content/plugins/tablepress-table-row-order:/var/www/$site_name/htdocs/wp-content/plugins/tablepress-table-row-order
+            - ../wp-content/plugins/fanciest-author-box:/app/wp-content/plugins/fanciest-author-box
+            - ../wp-content/plugins/fusion-core:/app/wp-content/plugins/fusion-core
+            - ../wp-content/plugins/submission-flow:/app/wp-content/plugins/submission-flow
+            - ../wp-content/plugins/tablepress-table-row-order:/app/wp-content/plugins/tablepress-table-row-order
             # Themes
-            - ../dist/aliem:/var/www/$site_name/htdocs/wp-content/themes/aliem
-            - ../wp-content/themes/Avada:/var/www/$site_name/htdocs/wp-content/themes/Avada
+            - ../dist/aliem:/app/wp-content/themes/aliem
+            - ../wp-content/themes/Avada:/app/wp-content/themes/Avada
             # Uploads
-            - ../wp-content/uploads:/var/www/$site_name/htdocs/wp-content/uploads
+            - ../wp-content/uploads:/app/wp-content/uploads
         env_file: ../.env
         environment:
             DB_NAME: wordpress
             DB_PASS: root
             DB_USER: root
-            SITE_NAME: $site_name
             PHP_VERSION: 7.0
             PLUGINS: >-
                 academic-bloggers-toolkit,
@@ -38,6 +34,15 @@ services:
                 tablepress,
                 wordpress-seo,
                 wp-smushit,
+                [abt-deprecated-peer-review]https://github.com/dsifford/abt-deprecated-peer-review/archive/master.zip,
+                [local]abt-peer-review,
+                [local]fanciest-author-box,
+                [local]fusion-core,
+                [local]submission-flow,
+                [local]tablepress-table-row-order,
+            THEMES: >-
+                [local]Avada,
+                [local]aliem,
             WP_DEBUG_DISPLAY: 'false'
             WP_DEBUG_LOG: 'true'
             WP_DEBUG: 'true'
@@ -49,17 +54,3 @@ services:
             MYSQL_ROOT_PASSWORD: root
         volumes:
             - data:/var/lib/mysql
-
-    # Production Builds
-    wordpress_prod:
-        extends: wordpress
-        restart: on-failure:10
-        ports:
-            - "80:80"
-        environment:
-            DB_PASS: $DB_PASS
-    db_prod:
-        extends: db
-        restart: on-failure:10
-        environment:
-            MYSQL_ROOT_PASSWORD: $DB_PASS
