--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,62 @@
 version: '2'
 services:
     wordpress:
-        extends:
-            file: lib/compose.yml
-            service: wordpress
+        image: dsifford/wordpress:apache-next
         links:
             - db
         ports:
             - "8080:80"
+        volumes:
+            # Database
+            - ./data:/data
+            # Plugins
+            - ./wp-content/plugins/fanciest-author-box:/app/wp-content/plugins/fanciest-author-box
+            - ./wp-content/plugins/fusion-core:/app/wp-content/plugins/fusion-core
+            - ./wp-content/plugins/fusion-builder:/app/wp-content/plugins/fusion-builder
+            - ./wp-content/plugins/submission-flow:/app/wp-content/plugins/submission-flow
+            - ./wp-content/plugins/tablepress-table-row-order:/app/wp-content/plugins/tablepress-table-row-order
+            # Themes
+            - ./dist/aliem:/app/wp-content/themes/aliem
+            - ./wp-content/themes/Avada:/app/wp-content/themes/Avada
+            # Uploads
+            - ./wp-content/uploads:/app/wp-content/uploads
         environment:
-            SEARCH_REPLACE: https://www.aliem.com,http://localhost:8080
+            DB_NAME: wordpress
+            DB_PASS: root
+            DB_USER: root
+            PLUGINS: >-
+                academic-bloggers-toolkit,
+                co-authors-plus,
+                disqus-notify-content-author,
+                disqus-comment-system,
+                easy-add-thumbnail,
+                wysija-newsletters,
+                mce-table-buttons,
+                polldaddy,
+                shortcodes-ultimate,
+                tablepress,
+                wordpress-seo,
+                wp-smushit,
+                [abt-deprecated-peer-review]https://github.com/dsifford/abt-deprecated-peer-review/archive/master.zip,
+                [local]fanciest-author-box,
+                [local]fusion-builder,
+                [local]fusion-core,
+                [local]submission-flow,
+                [local]tablepress-table-row-order,
+            THEMES: >-
+                [local]Avada,
+                [local]aliem,
             WP_DEBUG_DISPLAY: 'true'
+            WP_DEBUG_LOG: 'true'
+            WP_DEBUG: 'true'
+            SEARCH_REPLACE: https://www.aliem.com,http://localhost:8080
     db:
-        extends:
-            file: lib/compose.yml
-            service: db
+        image: mariadb:10
+        expose:
+            - "3306"
+        environment:
+            MYSQL_ROOT_PASSWORD: root
+        volumes:
+            - data:/var/lib/mysql
 volumes:
     data: {}
