--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Repository for core ALiEM website.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "./node_modules/.bin/stylint ./aliem/styles/"
   },
   "repository": {
     "type": "git",
@@ -17,15 +18,15 @@
   },
   "homepage": "https://github.com/AcademicLifeInEM/ALiEM#readme",
   "devDependencies": {
-    "autoprefixer": "^6.5.0",
-    "browser-sync": "^2.17.2",
+    "autoprefixer": "^6.5.1",
+    "browser-sync": "^2.17.5",
     "del": "^2.2.2",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-csso": "^2.0.0",
     "gulp-insert": "^0.5.0",
     "gulp-jade2php": "^1.0.4",
     "gulp-replace": "^0.5.4",
-    "gulp-sourcemaps": "^2.0.0",
+    "gulp-sourcemaps": "^2.2.0",
     "gulp-stylus": "^2.5.0",
     "gulp-svgmin": "^1.2.3",
     "gulp-uglify": "^2.0.0",
