--- a/package.json
+++ b/package.json
@@ -19,20 +19,31 @@
   "homepage": "https://github.com/AcademicLifeInEM/ALiEM#readme",
   "devDependencies": {
     "autoprefixer": "^6.5.1",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-register": "^6.18.0",
     "browser-sync": "^2.17.5",
     "del": "^2.2.2",
+    "eslint": "^3.9.1",
+    "eslint-config-airbnb-base": "^9.0.0",
+    "eslint-plugin-import": "^2.1.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-csso": "^2.0.0",
     "gulp-insert": "^0.5.0",
     "gulp-jade2php": "^1.0.4",
+    "gulp-load-plugins": "^1.4.0",
     "gulp-replace": "^0.5.4",
     "gulp-sourcemaps": "^2.2.0",
-    "gulp-stylus": "^2.5.0",
+    "gulp-stylus": "^2.6.0",
     "gulp-svgmin": "^1.2.3",
     "gulp-uglify": "^2.0.0",
     "merge-stream": "^1.0.0",
     "poststylus": "^0.2.3",
     "webpack-stream": "^3.2.0"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  }
 }
