Add style for definition lists.
Closes #46

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
             DB_USER: root
             PLUGINS: >-
                 academic-bloggers-toolkit,
+                broken-link-checker,
                 co-authors-plus,
                 disqus-notify-content-author,
                 disqus-comment-system,
