Style changes. Closes #52, #54, #47

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
                 tablepress,
                 wordpress-seo,
                 wp-smushit,
+                query-monitor,
                 [abt-deprecated-peer-review]https://github.com/dsifford/abt-deprecated-peer-review/archive/master.zip,
                 [local]fanciest-author-box,
                 [local]fusion-builder,
