--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/AcademicLifeInEM/ALiEM#readme",
   "devDependencies": {
-    "autoprefixer": "^6.5.4",
+    "autoprefixer": "^6.6.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.18.0",
     "browser-sync": "^2.18.5",
@@ -31,13 +31,13 @@
     "eslint-plugin-import": "^2.2.0",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-csso": "^2.0.0",
+    "gulp-imagemin": "^3.1.1",
     "gulp-insert": "^0.5.0",
     "gulp-jade2php": "^1.0.4",
     "gulp-load-plugins": "^1.4.0",
     "gulp-replace": "^0.5.4",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-stylus": "^2.6.0",
-    "gulp-svgmin": "^1.2.3",
     "gulp-uglify": "^2.0.0",
     "merge-stream": "^1.0.1",
     "poststylus": "^0.2.3",
