--- a/lib/production.yml
+++ b/lib/production.yml
@@ -3,22 +3,21 @@ services:
     wordpress:
         image: visiblevc/wordpress:0.14.0-php7.0
         ports:
-            - 8080:80
+            - 443:443
+            - 80:80
         volumes:
-            # Database
             - ./data:/data
-            # Plugins
+            - ./wp-content/themes:/app/wp-content/themes
             - ./wp-content/plugins/fanciest-author-box:/app/wp-content/plugins/fanciest-author-box
             - ./wp-content/plugins/fusion-builder:/app/wp-content/plugins/fusion-builder
             - ./wp-content/plugins/fusion-core:/app/wp-content/plugins/fusion-core
-            # Themes
-            - ./dist/aliem:/app/wp-content/themes/aliem
-            - ./wp-content/themes/Avada:/app/wp-content/themes/Avada
-            # Uploads
             - ./wp-content/uploads:/app/wp-content/uploads
+            - ./letsencrypt:/etc/letsencrypt
+        restart: always
         environment:
-            DB_NAME: wordpress
-            DB_PASS: root
+            DB_NAME: aliem
+            SITE_NAME: aliem.com
+            DB_PASS: ${DB_PASS}
             DB_USER: root
             PLUGINS: >-
                 academic-bloggers-toolkit,
@@ -34,24 +33,22 @@ services:
                 [abt-deprecated-peer-review]https://github.com/dsifford/abt-deprecated-peer-review/archive/master.zip,
                 [local]fanciest-author-box,
                 [local]fusion-builder,
-                [local]fusion-core,
+                [local]fusion-core
             THEMES: >-
                 [local]Avada,
-                [local]aliem,
-            WP_DEBUG_DISPLAY: 'true'
-            WP_DEBUG_LOG: 'true'
-            WP_DEBUG: 'true'
-            SEARCH_REPLACE: https://www.aliem.com,http://localhost:8080
+                [local]aliem
     db:
         image: mariadb:10
+        restart: always
         environment:
-            MYSQL_ROOT_PASSWORD: root
+            MYSQL_ROOT_PASSWORD: ${DB_PASS}
         volumes:
             - data:/var/lib/mysql
     phpmyadmin:
         image: phpmyadmin/phpmyadmin
+        restart: always
         environment:
-            MYSQL_ROOT_PASSWORD: root
+            MYSQL_ROOT_PASSWORD: ${DB_PASS}
         ports:
             - 22222:80
 volumes:
