--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "./node_modules/.bin/stylint ./aliem/styles/",
-    "start": "gulp _dev",
+    "start": "node --max_old_space_size=8192 node_modules/.bin/gulp _dev",
     "build": "gulp _build",
     "sync": "./lib/scripts/sync $@"
   },
@@ -22,8 +22,7 @@
   "homepage": "https://github.com/AcademicLifeInEM/ALiEM#readme",
   "devDependencies": {
     "autoprefixer": "^6.6.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-register": "^6.18.0",
+    "autoprefixer-stylus": "^0.13.0",
     "browser-sync": "^2.18.5",
     "del": "^2.2.2",
     "eslint": "^3.12.2",
@@ -32,14 +31,12 @@
     "gulp": "gulpjs/gulp#4.0",
     "gulp-csso": "^2.0.0",
     "gulp-imagemin": "^3.1.1",
-    "gulp-insert": "^0.5.0",
-    "gulp-load-plugins": "^1.4.0",
     "gulp-replace": "^0.5.4",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-stylus": "^2.6.0",
     "gulp-uglify": "^2.0.0",
     "merge-stream": "^1.0.1",
-    "poststylus": "^0.2.3",
+    "stylint": "^1.5.9",
     "webpack-stream": "^3.2.0"
   },
   "dependencies": {},
