--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "./node_modules/.bin/stylint ./aliem/styles/",
     "start": "node --max_old_space_size=8192 node_modules/.bin/gulp _dev",
+    "deploy": "./lib/scripts/deploy $@",
     "build": "gulp _build",
     "sync": "./lib/scripts/sync $@"
   },
@@ -26,15 +27,13 @@
     "browser-sync": "^2.18.5",
     "del": "^2.2.2",
     "eslint": "^3.12.2",
-    "eslint-config-airbnb-base": "^11.0.0",
+    "eslint-config-airbnb-base": "^11.1.3",
     "eslint-plugin-import": "^2.2.0",
     "gulp": "gulpjs/gulp#4.0",
-    "gulp-csso": "^3.0.0",
     "gulp-imagemin": "^3.1.1",
     "gulp-replace": "^0.5.4",
-    "gulp-sourcemaps": "^2.5.0",
+    "gulp-sourcemaps": "^2.5.1",
     "gulp-stylus": "^2.6.0",
-    "gulp-uglify": "^2.0.0",
     "merge-stream": "^1.0.1",
     "stylint": "^1.5.9",
     "webpack-stream": "^3.2.0"
