--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
     wordpress:
-        image: visiblevc/wordpress:0.14.0-php7.0
+        image: visiblevc/wordpress:0.15.2-php7.1
         ports:
             - 8080:80
         volumes:
@@ -22,22 +22,21 @@ services:
             DB_USER: root
             PLUGINS: >-
                 academic-bloggers-toolkit,
+                [abt-deprecated-peer-review]https://github.com/dsifford/abt-deprecated-peer-review/archive/master.zip,
                 broken-link-checker,
                 co-authors-plus,
                 disqus-comment-system,
                 wysija-newsletters,
                 mce-table-buttons,
                 shortcodes-ultimate,
-                wordpress-seo,
+                w3-total-cache,
                 wp-smushit,
-                query-monitor,
-                [abt-deprecated-peer-review]https://github.com/dsifford/abt-deprecated-peer-review/archive/master.zip,
-                [local]fanciest-author-box,
-                [local]fusion-builder,
-                [local]fusion-core,
-            THEMES: >-
-                [local]Avada,
-                [local]aliem,
+                wordpress-seo,
+
+                header-footer-code-manager,
+                riveted,
+                tablepress,
+                wp-hide-post,
             WP_DEBUG_DISPLAY: 'true'
             WP_DEBUG_LOG: 'true'
             WP_DEBUG: 'true'
