--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node --max_old_space_size=8192 node_modules/.bin/gulp _dev",
     "deploy": "./lib/scripts/deploy",
     "deploy-all": "./lib/scripts/deploy -a",
+    "deploy-initial": "./lib/scripts/deploy -ai",
     "build": "gulp _build",
     "sync": "./lib/scripts/sync $@"
   },
@@ -23,23 +24,17 @@
   },
   "homepage": "https://github.com/AcademicLifeInEM/ALiEM#readme",
   "devDependencies": {
-    "autoprefixer": "^6.6.0",
-    "autoprefixer-stylus": "^0.13.0",
-    "browser-sync": "^2.18.5",
-    "del": "^2.2.2",
-    "eslint": "^3.12.2",
-    "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-plugin-import": "^2.2.0",
+    "autoprefixer": "^7.1.1",
+    "autoprefixer-stylus": "^0.14.0",
+    "browser-sync": "^2.18.12",
+    "del": "^3.0.0",
     "gulp": "gulpjs/gulp#4.0",
-    "gulp-imagemin": "^3.1.1",
-    "gulp-replace": "^0.5.4",
-    "gulp-sourcemaps": "^2.6.0",
+    "gulp-imagemin": "^3.3.0",
     "gulp-stylus": "^2.6.0",
     "merge-stream": "^1.0.1",
     "stylint": "^1.5.9",
     "webpack-stream": "^3.2.0"
   },
-  "dependencies": {},
   "babel": {
     "presets": [
       "es2015"
