add modular js bundle proof-of-concept

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "deploy": "shellscript",
         "helpers": "shellscript",
         "sync": "shellscript",
-        "variables": "shellscript"
+        "variables": "shellscript",
+        "bundle": "shellscript"
     }
 }
