--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,5 +46,11 @@
     /* Experimental Options */
     "experimentalDecorators": true        /* Enables experimental support for ES7 decorators. */
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
-  }
+  },
+  "include": [
+      "gulpfile.ts",
+      "webpack.config.ts",
+      "aliem/**/*.tsx?",
+      "node_modules/@types/**/index.d.ts"
+  ]
 }
