various updates / fixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "helpers": "shellscript",
         "sync": "shellscript",
         "variables": "shellscript",
-        "bundle": "shellscript"
+        "bundle": "shellscript",
+        ".stylintrc": "json"
     }
 }
