--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "./node_modules/.bin/stylint ./aliem/styles/",
-    "start": "node --max_old_space_size=8192 ./node_modules/.bin/gulp",
+    "lint": "tslint -p . -t codeFrame && stylint ./aliem/styles/",
+    "start": "gulp",
+    "build": "NODE_ENV=production gulp",
     "deploy": "./lib/scripts/deploy",
     "deploy-all": "./lib/scripts/deploy -a",
     "deploy-initial": "./lib/scripts/deploy -ai",
-    "build": "NODE_ENV=production gulp",
     "sync": "./lib/scripts/sync $@",
     "version": "gulp bump"
   },
@@ -25,34 +25,41 @@
   },
   "homepage": "https://github.com/AcademicLifeInEM/ALiEM#readme",
   "devDependencies": {
-    "@types/node": "^8.0.7",
-    "@types/react": "^15.0.34",
-    "@types/react-dom": "^15.5.1",
-    "@types/webpack": "^3.0.1",
-    "autoprefixer": "^7.1.1",
+    "@types/gulp": "^4.0.4",
+    "@types/gulp-sourcemaps": "0.0.31",
+    "@types/node": "^8.0.19",
+    "@types/react": "^16.0.1",
+    "@types/react-dom": "^15.5.2",
+    "@types/react-virtualized": "^9.7.3",
+    "@types/webpack": "^3.0.6",
+    "autoprefixer": "^7.1.2",
     "autoprefixer-stylus": "^0.14.0",
+    "awesome-typescript-loader": "^3.2.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.0",
-    "babel-preset-env": "^1.5.2",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
-    "browser-sync": "^2.18.12",
+    "browser-sync": "^2.18.13",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-imagemin": "^3.3.0",
+    "gulp-sourcemaps": "^2.6.0",
     "gulp-stylus": "^2.6.0",
     "merge-stream": "^1.0.1",
     "style-loader": "^0.18.2",
     "stylint": "^1.5.9",
-    "ts-loader": "^2.2.2",
-    "ts-node": "^3.1.0",
-    "webpack": "^3.0.0",
-    "webpack-stream": "^3.2.0"
+    "ts-loader": "^2.3.2",
+    "ts-node": "^3.3.0",
+    "tslint": "^5.5.0",
+    "tslint-microsoft-contrib": "^5.0.1",
+    "tslint-react": "^3.2.0",
+    "webpack": "^3.4.1"
   },
   "dependencies": {
     "css-loader": "^0.28.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-virtualized": "^9.8.0",
-    "recharts": "^1.0.0-alpha.1",
-    "typescript": "^2.4.1"
+    "react-virtualized": "^9.9.0",
+    "recharts": "^1.0.0-alpha.2",
+    "typescript": "^2.4.2"
   }
 }
