--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "noUnusedParameters": true,            /* Report errors on unused parameters. */
     "noImplicitReturns": true,             /* Report error when not all code paths in function return a value. */
     "noFallthroughCasesInSwitch": true,    /* Report errors for fallthrough cases in switch statement. */
-    "noImplicitAny": false,
+    "noImplicitAny": true,
 
     /* Module Resolution Options */
     // "moduleResolution": "node",            /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
@@ -50,7 +50,8 @@
   "include": [
       "gulpfile.ts",
       "webpack.config.ts",
-      "aliem/**/*.tsx?",
+      "aliem/js/**/*",
+      "lib/**/*",
       "node_modules/@types/**/index.d.ts"
   ]
 }
