fix megamenu + add smtp fixes + add php-cs-fixer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "sync": "shellscript",
         "variables": "shellscript",
         "bundle": "shellscript",
-        ".stylintrc": "json"
+        ".stylintrc": "json",
+        ".php_cs": "php"
     }
 }
