--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "tslint -p . -t codeFrame && stylint ./aliem/styles/",
+    "phpcsfix": "php-cs-fixer fix --config=.php_cs -v",
     "start": "gulp",
     "build": "NODE_ENV=production gulp",
     "deploy": "./lib/scripts/deploy",
@@ -27,35 +28,34 @@
   "devDependencies": {
     "@types/gulp": "^4.0.4",
     "@types/gulp-sourcemaps": "0.0.31",
-    "@types/node": "^8.0.19",
-    "@types/react": "^16.0.1",
-    "@types/react-dom": "^15.5.2",
+    "@types/node": "^8.0.24",
+    "@types/react": "^16.0.2",
+    "@types/react-dom": "^15.5.3",
     "@types/react-virtualized": "^9.7.3",
-    "@types/webpack": "^3.0.6",
+    "@types/webpack": "^3.0.9",
     "autoprefixer": "^7.1.2",
     "autoprefixer-stylus": "^0.14.0",
-    "awesome-typescript-loader": "^3.2.2",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.0",
+    "awesome-typescript-loader": "^3.2.3",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "browser-sync": "^2.18.13",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-imagemin": "^3.3.0",
-    "gulp-sourcemaps": "^2.6.0",
+    "gulp-sourcemaps": "^2.6.1",
     "gulp-stylus": "^2.6.0",
     "merge-stream": "^1.0.1",
     "style-loader": "^0.18.2",
     "stylint": "^1.5.9",
-    "ts-loader": "^2.3.2",
     "ts-node": "^3.3.0",
-    "tslint": "^5.5.0",
+    "tslint": "^5.6.0",
     "tslint-microsoft-contrib": "^5.0.1",
     "tslint-react": "^3.2.0",
-    "webpack": "^3.4.1"
+    "webpack": "^3.5.5"
   },
   "dependencies": {
-    "css-loader": "^0.28.4",
+    "css-loader": "^0.28.5",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-virtualized": "^9.9.0",
