--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.1'
 services:
     wordpress:
         image: visiblevc/wordpress:0.15.2-php7.1
@@ -35,10 +35,11 @@ services:
                 header-footer-code-manager,
                 riveted,
             # wp-hide-post,
-            WP_DEBUG_DISPLAY: 'true'
-            WP_DEBUG_LOG: 'true'
-            WP_DEBUG: 'true'
             URL_REPLACE: https://www.aliem.com,http://localhost:8080
+            WP_DEBUG_DISPLAY: 'true'
+            WP_DEBUG: 'true'
+            ALIEM_API_KEY: ${ALIEM_API_KEY}
+
     db:
         image: mariadb:10
         environment:
