--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "aliem",
   "version": "0.6.0",
-  "description": "Repository for core ALiEM website.",
-  "main": "index.js",
+  "license": "MIT",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "tslint -p . -t codeFrame && stylint ./aliem/styles/",
+    "precommit": "lint-staged",
+    "prepush": "npm run lint",
+    "lint":
+      "tslint -p . -t codeFrame && php-cs-fixer fix --config=.php_cs -vvv --dry-run --stop-on-violation --using-cache=no",
     "phpcsfix": "php-cs-fixer fix --config=.php_cs -v",
     "start": "gulp",
     "build": "NODE_ENV=production gulp",
@@ -15,51 +17,48 @@
     "sync": "./lib/scripts/sync $@",
     "version": "gulp bump"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AcademicLifeInEM/ALiEM.git"
+  "dependencies": {
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-virtualized": "^9.10.1",
+    "recharts": "^1.0.0-alpha.2"
   },
-  "author": "Derek P Sifford",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/AcademicLifeInEM/ALiEM/issues"
-  },
-  "homepage": "https://github.com/AcademicLifeInEM/ALiEM#readme",
   "devDependencies": {
     "@types/gulp": "^4.0.4",
+    "@types/gulp-autoprefixer": "0.0.30",
+    "@types/gulp-sass": "0.0.30",
     "@types/gulp-sourcemaps": "0.0.31",
     "@types/node": "^8.0.31",
     "@types/react": "^16.0.7",
     "@types/react-dom": "^15.5.5",
     "@types/react-virtualized": "^9.7.4",
     "@types/webpack": "^3.0.12",
-    "autoprefixer": "^7.1.4",
-    "autoprefixer-stylus": "^0.14.0",
     "awesome-typescript-loader": "^3.2.3",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "browser-sync": "^2.18.13",
+    "css-loader": "^0.28.7",
     "gulp": "gulpjs/gulp#4.0",
+    "gulp-autoprefixer": "^4.0.0",
     "gulp-imagemin": "^3.3.0",
+    "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
-    "gulp-stylus": "^2.6.0",
+    "husky": "^0.14.3",
+    "lint-staged": "^4.2.3",
     "merge-stream": "^1.0.1",
+    "prettier": "^1.7.3",
     "style-loader": "^0.18.2",
-    "stylint": "^1.5.9",
     "ts-node": "^3.3.0",
     "tslint": "^5.7.0",
     "tslint-microsoft-contrib": "^5.0.1",
     "tslint-react": "^3.2.0",
+    "typescript": "^2.5.3",
     "webpack": "^3.6.0"
   },
-  "dependencies": {
-    "css-loader": "^0.28.7",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-virtualized": "^9.10.1",
-    "recharts": "^1.0.0-alpha.2",
-    "typescript": "^2.5.3"
+  "lint-staged": {
+    "*.{js,json,scss,ts,tsx}": ["prettier --write", "git add"],
+    "*.php": ["php-cs-fixer fix --config=.php_cs -v", "git add"]
   }
 }
