finish new header/footer/search experience

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,9 @@ services:
                 broken-link-checker,
                 co-authors-plus,
                 disqus-comment-system,
+                jetpack,
                 mce-table-buttons,
+                search-by-algolia-instant-relevant-results,
                 shortcodes-ultimate,
                 w3-total-cache,
                 wp-smushit,
