--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@types/gulp-sass": "0.0.30",
     "@types/gulp-sourcemaps": "0.0.31",
     "@types/node": "^8.0.47",
-    "@types/react": "^16.0.19",
+    "@types/react": "^16.0.20",
     "@types/react-dom": "^16.0.2",
     "@types/react-virtualized": "^9.7.6",
     "@types/webpack": "^3.0.14",
@@ -48,7 +48,9 @@
     "husky": "^0.14.3",
     "lint-staged": "^4.3.0",
     "merge-stream": "^1.0.1",
+    "node-sass": "^4.6.0",
     "prettier": "^1.7.4",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "ts-node": "^3.3.0",
     "tslint": "^5.8.0",
