--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "version": "gulp bump"
   },
   "dependencies": {
+    "intersection-observer": "^0.4.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-virtualized": "^9.12.0",
@@ -29,11 +30,11 @@
     "@types/gulp-rename": "0.0.32",
     "@types/gulp-sass": "0.0.30",
     "@types/gulp-sourcemaps": "0.0.31",
-    "@types/node": "^8.0.47",
+    "@types/node": "^8.0.50",
     "@types/react": "^16.0.20",
     "@types/react-dom": "^16.0.2",
     "@types/react-virtualized": "^9.7.6",
-    "@types/webpack": "^3.0.14",
+    "@types/webpack": "^3.8.0",
     "awesome-typescript-loader": "^3.3.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -51,7 +52,7 @@
     "lint-staged": "^4.3.0",
     "merge-stream": "^1.0.1",
     "node-sass": "^4.6.0",
-    "prettier": "^1.7.4",
+    "prettier": "^1.8.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "ts-node": "^3.3.0",
