upgrade dependencies + add google autoads

--- a/package.json
+++ b/package.json
@@ -35,38 +35,40 @@
     "@types/gulp-rename": "0.0.33",
     "@types/gulp-sass": "0.0.31",
     "@types/gulp-sourcemaps": "0.0.32",
-    "@types/node": "^9.4.0",
-    "@types/react": "^16.0.36",
-    "@types/react-dom": "^16.0.3",
-    "@types/react-virtualized": "^9.7.10",
-    "@types/recharts": "^1.0.13",
-    "@types/webpack": "^3.8.4",
-    "awesome-typescript-loader": "^3.4.1",
+    "@types/node": "^9.4.7",
+    "@types/react": "^16.0.40",
+    "@types/react-dom": "^16.0.4",
+    "@types/react-virtualized": "^9.7.13",
+    "@types/recharts": "^1.0.18",
+    "@types/tapable": "^1.0.0",
+    "@types/webpack": "^4.1.1",
+    "awesome-typescript-loader": "^5.0.0-1",
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "browser-sync": "^2.23.6",
-    "css-loader": "^0.28.9",
+    "css-loader": "^0.28.11",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-autoprefixer": "^4.1.0",
+    "gulp-autoprefixer": "^5.0.0",
     "gulp-imagemin": "^4.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.4",
     "husky": "^0.14.3",
-    "lint-staged": "^6.1.0",
+    "lint-staged": "^7.0.0",
     "merge-stream": "^1.0.1",
     "node-sass": "^4.7.2",
-    "prettier": "^1.10.2",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.20.1",
-    "ts-node": "^4.1.0",
+    "prettier": "^1.11.1",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
+    "ts-node": "^5.0.1",
     "tslint": "^5.9.1",
-    "tslint-microsoft-contrib": "^5.0.2",
-    "tslint-react": "^3.4.0",
-    "typescript": "^2.7.1",
-    "webpack": "^3.10.0"
+    "tslint-microsoft-contrib": "^5.0.3",
+    "tslint-react": "^3.5.1",
+    "typescript": "^2.8.0-rc",
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.12"
   },
   "lint-staged": {
     "*.{js,json,scss,ts,tsx}": [
