--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
     wordpress:
-        image: visiblevc/wordpress:0.17.0-php7.2
+        image: visiblevc/wordpress:0.18.0-php7.2
         ports:
             - 8080:80
         volumes:
@@ -19,20 +19,20 @@ services:
             DB_PASS: root
             DB_USER: root
             PLUGINS: >-
-                academic-bloggers-toolkit,
-                [abt-deprecated-peer-review]https://github.com/dsifford/abt-deprecated-peer-review/archive/master.zip,
-                broken-link-checker,
-                co-authors-plus,
-                disqus-comment-system,
-                jetpack,
-                mce-table-buttons,
-                search-by-algolia-instant-relevant-results,
-                shortcodes-ultimate,
-                w3-total-cache,
-                wp-smushit,
-                wordpress-seo,
-                query-monitor,
-            URL_REPLACE: https://www.aliem.com,http://localhost:8080
+                academic-bloggers-toolkit
+                [abt-deprecated-peer-review]https://github.com/dsifford/abt-deprecated-peer-review/archive/master.zip
+                broken-link-checker
+                co-authors-plus
+                disqus-comment-system
+                jetpack
+                mce-table-buttons
+                search-by-algolia-instant-relevant-results
+                shortcodes-ultimate
+                w3-total-cache
+                wp-smushit
+                wordpress-seo
+                query-monitor
+            URL_REPLACE: http://localhost:8080
             WP_DEBUG_DISPLAY: 'true'
             WP_DEBUG: 'true'
             ALIEM_API_KEY: ${ALIEM_API_KEY}
