--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   },
   "dependencies": {
     "intersection-observer": "^0.5.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
     "react-virtualized": "^9.18.5",
     "recharts": "^1.0.0-beta.5"
   },
@@ -35,13 +35,12 @@
     "@types/gulp-rename": "0.0.33",
     "@types/gulp-sass": "0.0.31",
     "@types/gulp-sourcemaps": "0.0.32",
-    "@types/node": "^9.4.7",
-    "@types/react": "^16.0.40",
-    "@types/react-dom": "^16.0.4",
-    "@types/react-virtualized": "^9.7.13",
+    "@types/node": "^9.6.5",
+    "@types/react": "^16.3.10",
+    "@types/react-dom": "^16.0.5",
     "@types/recharts": "^1.0.18",
-    "@types/tapable": "^1.0.0",
-    "@types/webpack": "^4.1.1",
+    "@types/tapable": "^1.0.1",
+    "@types/webpack": "^4.1.3",
     "awesome-typescript-loader": "^5.0.0-1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
@@ -53,22 +52,22 @@
     "gulp-autoprefixer": "^5.0.0",
     "gulp-imagemin": "^4.1.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
+    "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
     "husky": "^0.14.3",
-    "lint-staged": "^7.0.0",
+    "lint-staged": "^7.0.4",
     "merge-stream": "^1.0.1",
-    "node-sass": "^4.7.2",
-    "prettier": "^1.11.1",
-    "sass-loader": "^6.0.7",
+    "node-sass": "^4.8.3",
+    "prettier": "^1.12.0",
+    "sass-loader": "^7.0.1",
     "style-loader": "^0.20.3",
     "ts-node": "^5.0.1",
     "tslint": "^5.9.1",
     "tslint-microsoft-contrib": "^5.0.3",
     "tslint-react": "^3.5.1",
-    "typescript": "^2.8.0-rc",
-    "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.12"
+    "typescript": "^2.8.1",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14"
   },
   "lint-staged": {
     "*.{js,json,scss,ts,tsx}": [
