adjust docker-compose files

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -5,6 +5,7 @@ services:
             URL_REPLACE: http://localhost:8080
             WP_DEBUG_DISPLAY: 'true'
             WP_DEBUG: 'true'
+            WP_VERSION: nightly
         ports:
             - 8080:80
         volumes:
