--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,11 @@
 {
-  "presets": [
-    [
-      "env",
-      {
-        "modules": false
-      }
+    "presets": [
+        "@babel/preset-react",
+        [
+            "@babel/preset-env",
+            {
+                "modules": false
+            }
+        ]
     ]
-  ]
 }
