--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.7'
 services:
     wordpress:
         environment:
@@ -6,8 +6,27 @@ services:
             WP_DEBUG_DISPLAY: 'true'
             WP_DEBUG: 'true'
             WP_VERSION: nightly
+            EXTRA_PHP: |
+                define( 'ALIEM_API_KEY', '${ALIEM_API_KEY?ALIEM_API_KEY not defined in .env}' );
+                define( 'IMAGE_EDIT_OVERWRITE', true );
+                define( 'WP_POST_REVISIONS', 3 );
+                if ( defined( 'WP_CLI' ) && WP_CLI && ! isset( $$_SERVER['HTTP_HOST'] ) ) {
+                    $$_SERVER['HTTP_HOST'] = 'localhost';
+                }
+            PLUGINS: >-
+                academic-bloggers-toolkit
+                broken-link-checker
+                co-authors-plus
+                disqus-comment-system
+                jetpack
+                query-monitor
+                search-by-algolia-instant-relevant-results
+                shortcodes-ultimate
+                w3-total-cache
+                wordpress-seo
+                wp-smushit
         ports:
             - 8080:80
         volumes:
-            - ./dist:/app/wp-content/themes/aliem
+            - ./dist:/app/wp-content/themes/aliem.com
             - ./wp-content/themes/Avada:/app/wp-content/themes/Avada
