--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,37 @@
-version: '3'
+version: '3.7'
 services:
     wordpress:
-        image: visiblevc/wordpress:0.18.0-php7.2
+        image: visiblevc/wordpress:0.22.0-php7.3
+        cap_add:
+            - SYS_ADMIN
+        devices:
+            - /dev/fuse
         environment:
-            ALIEM_API_KEY: ${ALIEM_API_KEY?ALIEM_API_KEY key not defined in .env}
             DB_NAME: aliem
             DB_PASS: root
             DB_USER: root
-            PLUGINS: >-
-                academic-bloggers-toolkit
-                [abt-deprecated-peer-review]https://github.com/dsifford/abt-deprecated-peer-review/archive/master.zip
-                broken-link-checker
-                co-authors-plus
-                disqus-comment-system
-                jetpack
-                mce-table-buttons
-                search-by-algolia-instant-relevant-results
-                shortcodes-ultimate
-                w3-total-cache
-                wordpress-seo
-                wp-smushit
         volumes:
             - ./data:/data
             - ./wp-content/plugins/fanciest-author-box:/app/wp-content/plugins/fanciest-author-box
+            - ./wp-content/plugins/instagram-feed-pro:/app/wp-content/plugins/instagram-feed-pro
             - ./wp-content/uploads:/app/wp-content/uploads
+
     db:
         image: mariadb:10
         environment:
             MYSQL_ROOT_PASSWORD: root
         volumes:
             - data:/var/lib/mysql
+
     phpmyadmin:
         image: phpmyadmin/phpmyadmin
-        environment:
-            MYSQL_ROOT_PASSWORD: root
+        volumes:
+            - data:/var/lib/mysql
         ports:
             - 22222:80
+
+    redis:
+        image: redis
+
 volumes:
     data:
