--- a/package.json
+++ b/package.json
@@ -1,78 +1,89 @@
 {
-  "name": "aliem",
-  "version": "0.8.4",
-  "license": "MIT",
-  "private": true,
-  "server": {
-    "name": "aliem",
-    "base_theme": "Avada",
-    "plugins": [
-      "fanciest-author-box"
-    ]
-  },
-  "scripts": {
-    "build": "NODE_ENV=production gulp",
-    "deploy": "./lib/scripts/deploy.py",
-    "lint": "tslint -p . -t codeFrame",
-    "precommit": "lint-staged",
-    "prepush": "npm run lint",
-    "pull-subtree": "git subtree pull --squash -P lib/scripts devops master",
-    "start": "gulp",
-    "sync": "./lib/scripts/sync.py",
-    "torus": "torus run 'echo test' &>/dev/null || torus login",
-    "version": "gulp bump && git add -A"
-  },
-  "dependencies": {
-    "intersection-observer": "^0.5.0",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
-    "react-virtualized": "^9.18.5",
-    "recharts": "^1.0.0-beta.5"
-  },
-  "devDependencies": {
-    "@types/gulp": "^4.0.5",
-    "@types/gulp-autoprefixer": "0.0.31",
-    "@types/gulp-rename": "0.0.33",
-    "@types/gulp-sass": "0.0.31",
-    "@types/gulp-sourcemaps": "0.0.32",
-    "@types/node": "^9.6.5",
-    "@types/react": "^16.3.10",
-    "@types/react-dom": "^16.0.5",
-    "@types/recharts": "^1.0.18",
-    "@types/tapable": "^1.0.1",
-    "@types/webpack": "^4.1.3",
-    "awesome-typescript-loader": "^5.0.0-1",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "browser-sync": "^2.23.6",
-    "css-loader": "^0.28.11",
-    "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-autoprefixer": "^5.0.0",
-    "gulp-imagemin": "^4.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^4.0.1",
-    "gulp-sourcemaps": "^2.6.4",
-    "husky": "^0.14.3",
-    "lint-staged": "^7.0.4",
-    "merge-stream": "^1.0.1",
-    "node-sass": "^4.8.3",
-    "prettier": "^1.12.0",
-    "sass-loader": "^7.0.1",
-    "style-loader": "^0.20.3",
-    "ts-node": "^5.0.1",
-    "tslint": "^5.9.1",
-    "tslint-microsoft-contrib": "^5.0.3",
-    "tslint-react": "^3.5.1",
-    "typescript": "^2.8.1",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14"
-  },
-  "lint-staged": {
-    "*.{js,json,scss,ts,tsx}": [
-      "prettier --write",
-      "git add"
-    ]
-  }
+    "name": "aliem.com",
+    "version": "0.8.4",
+    "license": "MIT",
+    "private": true,
+    "scripts": {
+        "lint:scss": "stylelint ./src/**/*.scss",
+        "lint:ts": "tslint -p . -t stylish",
+        "lint": "npm run lint:scss && npm run lint:ts",
+        "build": "TS_NODE_PROJECT=./tsconfig.node.json TS_NODE_FILES=true webpack --mode production",
+        "build:dev": "TS_NODE_PROJECT=./tsconfig.node.json TS_NODE_FILES=true webpack --mode development",
+        "start": "npm run build:dev -- --watch",
+        "up": "docker-compose up -d && docker-compose logs -f wordpress",
+        "down": "docker-compose down -v",
+        "wp": "docker-compose exec wordpress wp",
+        "sync": "./lib/sync.sh"
+    },
+    "browserslist": [
+        "extends @wordpress/browserslist-config"
+    ],
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged",
+            "pre-push": "npm run lint"
+        }
+    },
+    "lint-staged": {
+        "*.{js,json,scss,ts,tsx}": [
+            "prettier --write",
+            "git add"
+        ]
+    },
+    "dependencies": {
+        "intersection-observer": "^0.5.1",
+        "react": "^16.7.0",
+        "react-dom": "^16.7.0",
+        "react-virtualized": "^9.21.0",
+        "recharts": "^1.4.2"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.2.2",
+        "@babel/preset-env": "^7.3.1",
+        "@babel/preset-react": "^7.0.0",
+        "@dsifford/stylelint-config": "^0.2.0",
+        "@types/copy-webpack-plugin": "^4.4.2",
+        "@types/imagemin": "^6.0.0",
+        "@types/imagemin-svgo": "^7.0.0",
+        "@types/mini-css-extract-plugin": "^0.2.0",
+        "@types/node": "^10.12.18",
+        "@types/react": "^16.7.21",
+        "@types/react-dom": "^16.0.11",
+        "@types/react-virtualized": "^9.18.12",
+        "@types/recharts": "^1.1.9",
+        "@types/rimraf": "^2.0.2",
+        "@types/webpack": "^4.4.24",
+        "@wordpress/browserslist-config": "^2.2.3",
+        "awesome-typescript-loader": "^5.2.1",
+        "babel-loader": "^8.0.5",
+        "browser-sync": "^2.26.3",
+        "browser-sync-webpack-plugin": "^2.2.2",
+        "copy-webpack-plugin": "^4.6.0",
+        "css-loader": "^2.1.0",
+        "cssnano": "^4.1.8",
+        "husky": "^1.3.1",
+        "imagemin": "^6.1.0",
+        "imagemin-pngquant": "^7.0.0",
+        "imagemin-svgo": "^7.0.0",
+        "lint-staged": "^8.1.0",
+        "mini-css-extract-plugin": "^0.5.0",
+        "node-sass": "^4.11.0",
+        "postcss-loader": "^3.0.0",
+        "postcss-preset-env": "^6.5.0",
+        "prettier": "^1.16.1",
+        "rimraf": "^2.6.3",
+        "sass-loader": "^7.1.0",
+        "stylelint": "^9.10.1",
+        "stylelint-scss": "^3.5.1",
+        "ts-node": "^8.0.2",
+        "tslint": "^5.12.1",
+        "tslint-config-prettier": "^1.17.0",
+        "tslint-microsoft-contrib": "^6.0.0",
+        "tslint-react": "^3.6.0",
+        "typescript": "^3.2.4",
+        "typescript-tslint-plugin": "^0.3.0",
+        "webpack": "^4.29.0",
+        "webpack-cli": "^3.2.1",
+        "webpack-fix-style-only-entries": "^0.1.0"
+    }
 }
