add terraform file

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
-wp-content
-node_modules
-dist
-.env
-data
-temp
-TODO.md
-tmp
+/.terraform
+/data
+/dist
+/node_modules
+/wp-content
+
+*.tfvars
+*.tfstate
 .DS_Store
-npm-debug.log
+.env
 NOTES.md
+npm-debug.log
